--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>itmo.labs</groupId>
-    <artifactId>lab-parent-archetype</artifactId>
+    <artifactId>parent-archetype</artifactId>
     <version>1.0.0</version>
     <packaging>maven-archetype</packaging>
 
-    <name>lab-parent-archetype</name>
+    <name>parent-archetype</name>
 
     <build>
         <extensions>
