--- a/src/main/resources/archetype-resources/.gitignore
+++ b/src/main/resources/archetype-resources/.gitignore
@@ -1,7 +1,7 @@
 /target/
-/lab-client/target/
-/lab-common/target/
-/lab-server/target/
+/client/target/
+/common/target/
+/server/target/
 *.iml
 .idea
 *.jar
